<resources>
    <string name="app_name">Auto Train Brain Social</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Broca_text">Broca Theta =</string>
    <string name="registerMesasge">Do not Have an Account?</string>
    <string name="freeRegister">Sign Up for Free</string>
    <string name="old_pasw"> Old Password </string>
    <string name="new_pasw"> New Password </string>
    <string name="new_pasw_again"> New Password Again </string>
    <string name="protocol"> Protocol </string>
    <string name="mode"> Mode </string>
    <string name="ActivityName"> Activity Name </string>
    <string name="waitMessage">Please wait...</string>
    <string name="waitTitle">Your report is being prepared...</string>
    <string name="pasw_btn"> SAVE </string>
    <string name="change_pasw"> Change Your Password </string>
    <string name="forget_pasw"> Forget Password </string>
    <string name="send"> SEND </string>
    <string name="mailSent"> Mail Sent </string>
    <string name="mailSentdes"> Your new password has been sent to your e-mail address. </string>
    <string name="subsEnd"> Subscription End Date </string>
    <string name="password_update_success">Password updated successfuly.</string>
    <string name="passError1"> Wrong Old Password!</string>
    <string name="passError2"> Passwords do not match! </string>
    <string name="passError3"> Please enter a new password!</string>
    <string name="location"> Location </string>
    <string name="email"> Email </string>
    <string name="atb_web_site">ATB -
        <a href="http://www.autotrainbrain.com">www.autotrainbrain.com</a>
    </string>
    <string name="company_web_site">
        <a href="https://www.healthmobilesoftware.com">www.healthmobilesoftware.com</a>
    </string>
    <string name="app_usage_info">Use this application after Auto Train Brain Dyslexia session."
    </string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="login">Login</string>
    <string name="or">or</string>
    <string name="register">Register</string>
    <string name="company_info">Auto Train Brain is a registered trademark of HMS Health Mobile
        Software Sağlık Mobil Yazılım A.Ş. The project is supported by Sabancı University. Funded by
        TUBITAK 1512 BIGG in 2017. Funded by European Union and Turkish Republic.
    </string>
    <string name="hint_birthdate">Birthdate</string>
    <string name="hint_skill">Skill</string>
    <string name="hint_help">Helper</string>
    <string name="fill_missings">Please fill missing sections</string>
    <string name="gender">Gender</string>
    <string name="man">Man</string>
    <string name="woman">Woman</string>
    <string name="title_profile">My Profile</string>
    <string name="action_logout">Logout</string>
    <string name="brain_left">Left Brain</string>
    <string name="brain_right">Right Brain</string>
    <string name="point">Point</string>
    <string name="left">Left</string>
    <string name="dream">Dream</string>
    <string name="alphatheta">Addiction</string>
    <string name="anxiety">Anxiety</string>
    <string name="checking_location_services">Controlling location service</string>
    <string name="start_writing_to_file">Started writing to file</string>
    <string name="right">Right</string>
    <string name="data_could_not_save_check_connection">Can not save data, check internet
        connection
    </string>
    <string name="info_green_red">Eyes open, concentrate, green is good, red is bad</string>
    <string name="open_eyes_learn_letters">Eyes open, concentrate to learn the letters</string>
    <string name="connection_epoc_success">Connected to EPOC+</string>
    <string name="user_removed">User removed</string>
    <string name="could_be">Could be</string>
    <string name="not_have">No</string>
    <string name="have">Yes</string>
    <string name="opened_location_services">Location service enabled</string>
    <string name="opened_writing_services">File service enabled</string>
    <string name="checking_ble_connection">Controlling BLE connection</string>
    <string name="should_give_permissions">Application can not work without these permissions
    </string>
    <string name="open_your_bluetooth">Bluetooth should be opened for connecting to EPOC+</string>
    <string name="end_writing_to_file">Stopped writing to file</string>
    <string name="ogrenme_guclugu">Learning Difficulty</string>
    <string name="excitement">Excitement</string>
    <string name="file_url">https://s3-us-east-2.amazonaws.com/atbprod/EN/</string>
    <string name="ses_url">https://s3-us-east-2.amazonaws.com/atbprod/ses4/</string>
    <string name="record_continues">Recording continues...</string>
    <string name="summary">Summary</string>
    <string name="error_unexpected">An error occured, please try again later.</string>
    <string name="session">Session</string>
    <string name="have_no_data_for_chart">There is not enough data for summary</string>
    <string name="app_info">Please consult your doctor before using this application, HMS A.Ş.
        explicitly disclaims all claims and liabilities arising out of the use of this application.
        The application is ongoing clinical trials and no side effects has been reported to date.
    </string>
    <string name="copyright_info">All rights reserved © 2017 HMS A.Ş.\nPatents pending</string>
    <string name="credit_limit">Activity Limit</string>
    <string name="credit_limit_message">Your activity limit has been reached. You must purchase
        credit to continue using the app. Purchasing options will be active soon.
    </string>
    <string name="hint_name_surname">Name Surname</string>
    <string name="hint_phone">Telephone Number (05xxxxxxxxx)</string>
    <string name="hint_address">Address</string>
    <string name="hint_mail">Email</string>
    <string name="confirm">Confirm</string>
    <string name="make_purchase">Make Purchase</string>
    <string name="enter_credit_card">Enter Your Credit Card Info</string>
    <string name="confirm_contracts">I have read and approve the Distance Sales Contract and
        Preliminary Information Form.
    </string>
    <string name="installment_options">Annual subscription fee is 4200 TL including VAT.\n\n%s
        Installment Options
    </string>
    <string name="make_payment">Make Payment</string>
    <string name="title_credit_card">Credit Card Information</string>
    <string name="card_expiry">CARD EXPIRY</string>
    <string name="card_holder">CARD HOLDER</string>
    <string name="card_holder_name_sample">NAME SURNAME</string>
    <string name="card_mm_yy">MM/YY</string>
    <string name="card_number">CARD NUMBER</string>
    <string name="done">DONE</string>
    <string name="error_card_expired">Card expired</string>
    <string name="error_invalid_month">Invalid month</string>
    <string name="expiry">EXPIRY</string>
    <string name="mm_yy">MM/YY</string>
    <string name="name_on_card">NAME ON CARD</string>
    <string name="next">-></string>
    <string name="previous">PREVIOUS</string>
    <string name="sales_contract">Distance Sales Contract</string>
    <string name="pre_info_contract">Preliminary Information Form</string>
    <string name="check_contracts">You must approve the Distance Sales Contract and Preliminary
        Information Form before you pay.
    </string>
    <string name="payment_error">Payment was not received. Check your credit card information.
    </string>
    <string name="credit_card_error">Check your credit card information.</string>
    <string name="payment_success">Payment has been successful.</string>
    <string name="loading">Loading...</string>
    <string name="payment_success_url" translatable="false">https://healthmobilesoftware.com/
    </string>
    <string name="payment_error_url" translatable="false">https://autotrainbrain.com/</string>
    <string name="error_mail_or_username">Wrong username or password</string>
    <string name="error_login_internet">Problem on login, check your internet connection</string>
    <string name="incorrect_mail_address">Please enter a valid email address.</string>
    <string name="procure">If you would like to continue to use AutoTrainBrain, please subscribe
        with ₺4200 including VAT per year
    </string>
    <string name="action_buyreport">Show Report</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register_for_free">Register for Free</string>
    <string-array name="skills_arrays">
        <item>Numeric</item>
        <item>Verbal</item>
        <item>Spor</item>
        <item>Music</item>
        <item>Painting</item>
        <item>Handcraft</item>
    </string-array>
    <string-array name="helper_arrays">
        <item>Helper 1</item>
        <item>Helper 2</item>
        <item>Helper 3</item>
        <item>Helper 4</item>
        <item>Helper 5</item>
    </string-array>
    <string-array name="installments_array">
        <item>1 Installment</item>
        <item>2 Installment</item>
        <item>3 Installment</item>
        <item>4 Installment</item>
        <item>5 Installment</item>
        <item>6 Installment</item>
        <item>7 Installment</item>
        <item>8 Installment</item>
        <item>9 Installment</item>
        <item>10 Installment</item>
        <item>11 Installment</item>
        <item>12 Installment</item>
    </string-array>
    <string name="hint_gender">Gender</string>
    <string name="hint_session">Session</string>
    <string name="hint_maxsession">Maximum session</string>
    <string name="hint_disclaim">This report is not a medical report, it only provides information
        about the slow brain signals read during a session. Please consult your doctor for medical
        diagnose.
    </string>
    <string name="hint_reportprice">This report\'s price is 29 TL and you can pay with your credit
        car.
    </string>
    <string name="hint_session2">Activity Number</string>
    <string name="bigger_session">Session requested is bigger than available</string>
    <string name="show_report">Show Report Activity</string>
    <string name="diagnose">Read protocol</string>
    <string name="diagnose_auditory">Speak protocol</string>
    <string name="diagnose_manager">Clever and hyper protocol</string>
    <string name="dignose_care">Spatial protocol</string>
    <string name="diagnose_anxiety">Clever protocol</string>
    <string name="diagnose_AD">Attention deficit</string>
    <string name="diagnose_LD">Learning disability</string>
    <string name="diagnose_LB">Uses left brain</string>
    <string name="diagnose_RB">Uses right brain</string>
    <string name="diagnose_gifted">Gifted person</string>
    <string name="norm_data">Norm Data</string>
    <string name="save">Save</string>
    <string name="speak">Speak</string>
    <string name="write">Write</string>
    <string name="alphabet">Alphabet</string>
    <string name="spell">Spell</string>
    <string name="play_u"><u>PLAY</u></string>
    <string name="choose_photo">Choose Photo</string>
    <string name="save_relative">Save Relative</string>
    <string name="add_relative">Add Relative</string>
    <string name="f_n_sh">Fınısh</string>
    <string name="congratulations">Congratulations!</string>
    <string name="result_0_10">Result: 0 / 10</string>
    <string name="update_photo">Update Photo</string>
    <string name="relative_degree">Relative degree</string>
    <string name="emotion">Emotion</string>
    <string name="set_relative_emotion">Set Family Emotion</string>
    <string name="delete">delete</string>
    <string name="takenTime">Time Taken:</string>
    <string name="soci_words">Socialize</string>
    <string name="family_member_recognition">Family Faces</string>
    <string name="face_emotion">Emotions</string>
</resources>