<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.fftsample.MainActivity">

    <item
        android:id="@+id/action_summary"
        android:icon="@drawable/ic_chart_line_white_24dp"
        android:orderInCategory="100"
        android:title="@string/summary"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_buyreport"
        android:orderInCategory="100"
        android:title="@string/action_buyreport"
        app:showAsAction="never" />

    <item
        android:id="@+id/profile"
        android:title="@string/title_profile"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/action_logout"
        app:showAsAction="never" />



</menu>
