<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:background="@color/white"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                tools:context=".activity.MainActivity">

    <FrameLayout
        android:id="@+id/layout3"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/alphabet"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/spell"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/spell"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/speak"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/speak"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/write"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/write"
                android:textColor="@color/white"
                android:textSize="18sp" />


        </LinearLayout>


    </FrameLayout>

    <FrameLayout
        android:id="@+id/layout33"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/layout3"
        android:background="@color/white">

    </FrameLayout>


</RelativeLayout>