<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SetMember">

    <LinearLayout
        android:layout_width="387dp"
        android:layout_height="566dp"
        android:layout_marginLeft="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginRight="@dimen/margin_large"
        android:layout_marginBottom="@dimen/margin_medium"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <TextView
            android:id="@+id/titleForRelativeEmo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/set_relative_emotion"
            android:textColor="@color/colorPrimary"
            android:textSize="36sp" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small">

        </RelativeLayout>
        <ImageView
            android:id="@+id/image_profile1"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            tools:srcCompat="@tools:sample/avatars" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small">

        </RelativeLayout>
        <Button
            android:id="@+id/updatePhoto"
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:text="@string/update_photo"
            android:textColor="@color/white"
            app:backgroundTint="@color/colorPrimary" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small">

        </RelativeLayout>

        <EditText
            android:id="@+id/memberEmotion"
            android:layout_width="275dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:hint="@string/emotion"
            android:inputType="textPersonName"
            android:textSize="24sp" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small">

        </RelativeLayout>
        <LinearLayout
            android:id="@+id/saveDeleteLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <Button
                android:id="@+id/delete_member_button"
                android:layout_width="150dp"
                android:layout_height="55dp"
                android:text="@string/delete"
                android:layout_marginLeft="@dimen/margin_large"
                android:textColor="@color/white"
                app:backgroundTint="@color/orange" />
            <Button
                android:id="@+id/save_button"
                android:layout_width="150dp"
                android:layout_height="55dp"
                android:text="@string/save"
                android:layout_marginLeft="@dimen/margin_medium"
                android:textColor="@color/white"
                app:backgroundTint="@color/colorPrimary" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>