<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.addMember">



    <LinearLayout
        android:layout_width="387dp"
        android:layout_height="566dp"
        android:layout_marginLeft="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginRight="@dimen/margin_large"
        android:layout_marginBottom="@dimen/margin_medium"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/add_relative"
            android:textColor="@color/colorPrimary"
            android:textSize="36sp">
        </TextView>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large">
        </RelativeLayout>

        <ImageView
            android:id="@+id/image_profile1"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            tools:srcCompat="@tools:sample/avatars" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium">

        </RelativeLayout>

        <Button
            android:id="@+id/updatePhoto"
            android:layout_width="200dp"
            android:layout_height="55dp"

            android:text="@string/choose_photo"
            android:textColor="@color/white"
            app:backgroundTint="@color/orange" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large">

        </RelativeLayout>

        <EditText
            android:id="@+id/memberName"
            android:layout_width="275dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:hint="@string/relative_degree"
            android:inputType="textPersonName"
            android:textSize="24sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large">

        </RelativeLayout>

        <Button
            android:id="@+id/save_member_button"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:text="@string/save_relative"
            android:textColor="@color/white"
            app:backgroundTint="@color/colorAccent" />

    </LinearLayout>

</RelativeLayout>